tests/machine/x/clj/group_by_multi_join_sort.error
exit status 1
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/group_by_multi_join_sort.clj:105:1).
EOF while reading, starting at line 50

Full report at:
/tmp/clojure-1256407127777225366.edn
